{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 56,
  "lineage": "56422367-57ce-2218-d728-6bff7154ae85",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "my-private-default-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:998474265600:subnet/subnet-013f30031f0d1fd7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.31.32.0/20",
            "id": "subnet-013f30031f0d1fd7d",
            "map_public_ip_on_launch": true,
            "owner_id": "998474265600",
            "tags": {
              "Name": "my-private-default-subnet"
            },
            "vpc_id": "vpc-0813b5b404bcd4830"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:998474265600:vpc/vpc-0813b5b404bcd4830",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-00802ac04132c7f91",
            "default_route_table_id": "rtb-0ced1a3d4c88b944f",
            "default_security_group_id": "sg-05f72320305cb84e4",
            "dhcp_options_id": "dopt-0ad0bc2cc41f3e801",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0813b5b404bcd4830",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ced1a3d4c88b944f",
            "owner_id": "998474265600",
            "tags": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nlb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-06a933cc0fb8f290c",
            "domain": "vpc",
            "id": "eipalloc-0aa34d0f2038616e6",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-00940f1583a7423dc",
            "private_dns": "ip-172-31-38-248.ap-south-1.compute.internal",
            "private_ip": "172.31.38.248",
            "public_dns": "ec2-65-1-14-197.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.14.197",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_nlb"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prod-web-server-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db0b3ab7df22e366",
            "arn": "arn:aws:ec2:ap-south-1:998474265600:instance/i-064d48bdd77e8c0b3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064d48bdd77e8c0b3",
            "instance_state": "running",
            "instance_type": "r5.large",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-029e74779138c09ad",
            "private_dns": "ip-172-31-47-168.ap-south-1.compute.internal",
            "private_ip": "172.31.47.168",
            "public_dns": "ec2-65-1-64-161.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.64.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00e791a0cbfb5244c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "prod-web-servers-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013f30031f0d1fd7d",
            "tags": {
              "Name": "prod-web-server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0918a0d24a730e6b6"
            ]
          },
          "dependencies": [
            "aws_default_subnet.my-private-default-subnet",
            "aws_security_group.prod-web-servers-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prod-web-server-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db0b3ab7df22e366",
            "arn": "arn:aws:ec2:ap-south-1:998474265600:instance/i-0feaafa14c7018ed7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0feaafa14c7018ed7",
            "instance_state": "running",
            "instance_type": "r5.large",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cfb6dd3c3d609d91",
            "private_dns": "ip-172-31-32-208.ap-south-1.compute.internal",
            "private_ip": "172.31.32.208",
            "public_dns": "ec2-13-126-91-139.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.91.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-029c9c63275ec124e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "prod-web-servers-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013f30031f0d1fd7d",
            "tags": {
              "Name": "prod-web-server-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0918a0d24a730e6b6"
            ]
          },
          "dependencies": [
            "aws_default_subnet.my-private-default-subnet",
            "aws_security_group.prod-web-servers-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:998474265600:loadbalancer/net/network-lb/47737154aa0d6474",
            "arn_suffix": "net/network-lb/47737154aa0d6474",
            "dns_name": "network-lb-47737154aa0d6474.elb.ap-south-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:998474265600:loadbalancer/net/network-lb/47737154aa0d6474",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "network-lb",
            "subnet_mapping": [
              {
                "allocation_id": "eipalloc-0aa34d0f2038616e6",
                "subnet_id": "subnet-013f30031f0d1fd7d"
              }
            ],
            "subnets": [
              "subnet-013f30031f0d1fd7d"
            ],
            "tags": {
              "name": "network-lb"
            },
            "vpc_id": "vpc-0813b5b404bcd4830",
            "zone_id": "ZVDDRBQ08TROA"
          },
          "dependencies": [
            "aws_default_subnet.my-private-default-subnet",
            "aws_eip.eip_nlb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:998474265600:listener/net/network-lb/47737154aa0d6474/c272931bae911696",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:998474265600:targetgroup/tg/2b25895ce1811d4c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:998474265600:listener/net/network-lb/47737154aa0d6474/c272931bae911696",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:998474265600:loadbalancer/net/network-lb/47737154aa0d6474",
            "port": 443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_default_subnet.my-private-default-subnet",
            "aws_default_vpc.default",
            "aws_eip.eip_nlb",
            "aws_lb.load_balancer",
            "aws_lb_target_group.tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:998474265600:targetgroup/tg/2b25895ce1811d4c",
            "arn_suffix": "targetgroup/tg/2b25895ce1811d4c",
            "deregistration_delay": 90,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:998474265600:targetgroup/tg/2b25895ce1811d4c",
            "lambda_multi_value_headers_enabled": false,
            "name": "tg",
            "port": 443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "name": "tg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0813b5b404bcd4830"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tga1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:998474265600:targetgroup/tg/2b25895ce1811d4c-20210121162832241700000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:998474265600:targetgroup/tg/2b25895ce1811d4c",
            "target_id": "i-064d48bdd77e8c0b3"
          },
          "dependencies": [
            "aws_default_subnet.my-private-default-subnet",
            "aws_default_vpc.default",
            "aws_instance.prod-web-server-1",
            "aws_lb_target_group.tg",
            "aws_security_group.prod-web-servers-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tga2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:998474265600:targetgroup/tg/2b25895ce1811d4c-20210121162832256800000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:998474265600:targetgroup/tg/2b25895ce1811d4c",
            "target_id": "i-0feaafa14c7018ed7"
          },
          "dependencies": [
            "aws_default_subnet.my-private-default-subnet",
            "aws_default_vpc.default",
            "aws_instance.prod-web-server-2",
            "aws_lb_target_group.tg",
            "aws_security_group.prod-web-servers-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod-web-servers-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:998474265600:security-group/sg-0918a0d24a730e6b6",
            "description": "prod-web-servers-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0918a0d24a730e6b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-web-servers-sg",
            "name_prefix": "",
            "owner_id": "998474265600",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-web-servers-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0813b5b404bcd4830"
          }
        }
      ]
    }
  ]
}